src/input/css/blocks/site-head.css
.site-head {
	padding: var(--size-6) 0;
	z-index: 1;

	& .inner {
		align-items: center;
		display: flex;
		flex-wrap: wrap;
		gap: var(--size-3);

		& > sl-icon-button {
			--sl-focus-ring: 2px solid var(--link);

			inline-size: fit-content;

			&::part(base) {
				color: var(--link);
				outline-offset: 0;

				&:is(:hover, :focus, :active) {
					color: var(--link-visited);
				}

				&:focus-visible {
					outline: 2px solid var(--link);
					outline-offset: var(--size-1);
				}

				&:active {
					outline-offset: 0;
				}

				@media (prefers-reduced-motion: no-preference) {
					transition: outline-offset 145ms var(--ease-2);
				}
			}
		}
	}

	& a[href="/"] {
		flex-shrink: 0;
		margin-inline-end: auto; /* Prevents nav bunching up to the logo */
		margin-right: auto; /* Prevents nav bunching up to the logo */

		&:hover {
			background-color: transparent;
		}

		& > .logo {
			font-size: var(--font-size-5);
		}
	}

	& .nav {
		padding: var(--size-2) 0;
	}
}

